2010-03-19 Alexander Opitz <opi@gmx.at>
* add Twig Templates #27

2010-03-11 Alexander Opitz <opi@gmx.at>
* Let application and screen instance of view #22
* Extend application interface #26
* Use view in application and screen #25
* Update SimpleFormDemo #24
* Releasing 0.0.5 #23

2010-02-03 Alexander Opitz <opi@gmx.at>
* Reorganize SVN #14
* Startable on Windows #17
* Fix template naming #16
* Screen needs different views #18
* SimpleFormDemo #15
* Releasing 0.0.4 #19

2010-01-02 Alexander Opitz <opi@gmx.at>
* Implement getConfigParameter
* Implement simple getParameter
* Fix false controller constructor
* Releasing 0.0.3

2009-12-14 Alexander Opitz <opi@gmx.at>
* Add Twig Templater

2009-12-07 Alexander Opitz <opi@gmx.at>
* Add templatizing
* Releasing 0.0.2

2009-11-10 Alexander Opitz <opi@gmx.at>
* Add missing Start file.
* Add Release notes and install informations.
* Releasing 0.0.1.1

2009-11-09 Alexander Opitz <opi@gmx.at>
* Releasing 0.0.1