@@ -1,3 +1,6 @@
+2010-04-10 Alexander Opitz <opi@gmx.at>
+* Multiple Views per Screen #29
+
 2010-03-19 Alexander Opitz <opi@gmx.at>
 * add Twig Templates #27
 
